corrected SVG import